# cs933-lab

./: .gitignore  README.md  playground.py  pyproject.toml  setup.sh
data/: moon.mov
data/dt/: README
lab1/: lab-1.ipynb
lab2/: lab-2.ipynb
practical_assignment/: load-and-display-annotations.ipynb  part-1.ipynb  part-2.ipynb  part-3.ipynb
practical_assignment/data/ANNOTATIONS/: BOARD3-1.xml  BUCK-1.xml  BUCK-2.xml  BUCK-3.xml  CAP1-2.xml  CAP1-3.xml  CAP2-1.xml  CAP2-2.xml  CAP2-3.xml  DAC-2.xml  DIODE-3.xml  ENET-1.xml  ENET-2.xml  ENET-3.xml  OSC1-1.xml  OSC2-1.xml  OSC2-2.xml  RECT-1.xml  RECT-3.xml  REGULATOR-2.xml  REGULATOR-3.xml  RESISTOR-2.xml  TRANSISTOR-2.xml
practical_assignment/data_dir/ANNOTATIONS/: CAP1-1.xml  CON-1.xml  CON-2.xml  CON-3.xml  DAC-1.xml  DAC-3.xml  DIODE-1.xml  DIODE-2.xml  OSC1-2.xml  OSC1-3.xml  OSC2-3.xml  RECT-2.xml  REGULATOR-1.xml  RESISTOR-1.xml  RESISTOR-3.xml  TRANSISTOR-1.xml  TRANSISTOR-3.xml
practical_assignment/lib/: _box.py  _calculations.py  _color.py  _file.py  _presentation.py  _resistor_value.py  public.py
