[tool.poetry]
name = "cs933-lab"
version = "0.1.0"
description = ""
authors = ["Xanonymous <trusaidlin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
matplotlib = "^3.8.0"
numpy = "^1.26.0"


[tool.poetry.group.dev.dependencies]
notebook = "^7.0.5"
nbclassic = "^1.0.0"
jupyter-collaboration = "^1.2.0"
jupyterlab-night = "^0.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
