[tool.poetry]
name = "cs933-lab"
version = "0.1.0"
description = ""
authors = ["Xanonymous <trusaidlin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
matplotlib = "^3.8.0"
numpy = "^1.26.0"
scipy = "^1.11.3"
scikit-image = "^0.22.0"
scikit-learn = "^1.3.2"
opencv-python = "^4.8.1.78"


[tool.poetry.group.dev.dependencies]
notebook = "^7.0.5"
nbclassic = "^1.0.0"
jupyterlab-night = "^0.4.6"
ruff = "^0.0.292"
black = "^23.9.1"
jupyter-contrib-nbextensions = "^0.7.0"
jupyterlab-code-formatter = "^2.2.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
