[tool.poetry]
name = "cs933-lab"
version = "0.1.0"
description = ""
authors = ["Xanonymous <trusaidlin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
matplotlib = "^3.9.0"
numpy = "^1.26.4"
scipy = "^1.13.0"
scikit-image = "^0.23.2"
scikit-learn = "^1.4.2"
opencv-python = "^4.9.0.80"


[tool.poetry.group.dev.dependencies]
notebook = "^7.2.0"
nbclassic = "^1.0.0"
jupyterlab-night = "^0.4.6"
ruff = "^0.4.4"
black = "^24.4.2"
jupyter-contrib-nbextensions = "^0.7.0"
jupyterlab-code-formatter = "^2.2.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
